Moved sponsors grid to _sponsors.scss. Added logos for UF CIE and Onward Dev. Fixed about section missing skewed border on tablet and desktop. Added new sponsor partials.

--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -20,72 +20,3 @@
     &--align-center { align-self: center; }
   }
 }
-
-.sponsors-grid {
-  justify-content: center;
-
-  .grid-cell {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    padding: 30px;
-    border-bottom: 1px solid darken($off-white, 5%);
-    @include breakpoint($tablet_wide) {
-      height: 220px;
-      border-right: 1px solid darken($off-white, 5%);
-      border-bottom: 1px solid darken($off-white, 5%);
-      &:after {
-         content: '';
-         position: absolute;
-         bottom: -20px;
-         right: -20px;
-         height: 40px;
-         width: 40px;
-         z-index: 50;
-         background: $off-white;
-       }
-      &:last-child { border-right: 0; }
-    }
-
-    img {
-      width: 90%;
-      max-width: 500px;
-      height: auto;
-      @include breakpoint($tablet_wide) {
-        margin: auto;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-      }
-    }
-
-  }
-
-  &--magnolia {
-    .grid-cell img {
-      max-width: 400px;
-    }
-  }
-
-  &--sapling {
-    .grid-cell img {
-      max-width: 300px;
-    }
-  }
-
-  &--seedling {
-    .grid-cell img {
-      max-width: 200px;
-    }
-  }
-
-  &--last {
-    .grid-cell:last-child { border-bottom: 0; }
-    @include breakpoint($tablet_wide) {
-      .grid-cell { border-bottom: 0; }
-    }
-  }
-
-}
